# blog

./: .doit.db.db  .gitignore  CNAME  README.md  archive.html  conf.py  index.html  pyproject.toml  requirements.txt  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
2014/: index.html
2016/: index.html
2017/: index.html
2018/: index.html
2019/: index.html
categories/: algorithms.xml  assembly.xml  asyncio.xml  boost.xml  builds.xml  c++.xml  c.xml  cat_posts.xml  cat_ssl.xml  cpp.xml  databases.xml  development.xml  dns.xml  docs.xml  dyi.xml  food.xml  index.html  li.xml  libc++.xml  linux.xml  machine-learning.xml  ml.xml  mnist.xml  mongodb.xml  nat.xml  neovim-plugin.xml  neovim.xml  networking.xml  osdev.xml  productivity.xml  pypy.xml  python.xml  python3.xml  qa.xml  qemu.xml  recipes.xml  redox.xml  rust.xml  scikit-learn.xml  showterm.xml  (+12 more)
listings/: index.html
posts/: awesome-time-tracker.rst  boost-deps-analyzer.rst  boyer-moore-string-search.rst  cpp-static-analysis.rst  first-neovim-plugin-in-python.rst  linux-network-routing-table.rst  linux-virtual-network-devices.rst  machine-learning-intro.rst  math-in-nikola-posts.rst  mnist-with-scikit-learn.rst  network-address-translation.md  network-address-translation.rst  oat-flour-pancakes.rst  python-asyncio-vs-nginx-performance.rst  rust-first-steps.rst  set-xonsh-as-the-default-shell.rst  showterm-server-install.rst  ssh-agent-forwarding.rst  systemd-execute-bash-script-on-start.rst  using-libc++-for-os-kernel-development.rst  what-i-have-learned-from-resurrecting-my-operating-system.rst
(+100 files in other folders)
