[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Personal blog"
authors = ["Povilas Balciunas <povilasb@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nikola = "^8.2.3"
tomli = "^2.0.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
